test/asm/multiple-section-errors.asm
SECTION FRAGMENT "test", ROM0[$0000]

SECTION FRAGMENT "test", ROMX[$4000]
